--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- I changed the favicon.ico file and replaced it with my own -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,7 +25,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+    <!-- I changed the title of the tab so that it doesn't display the React default -->
+    <title>IS 413 - Mission 9</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
