Updated changes for final draft

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,11 @@
 <!doctype html>
+
+<!--
+ IS 413 - Mission 09
+ by Jacob McGuire
+ Section 002, Group 03
+-->
+
 <html lang="en">
   <head>
     <meta charset="utf-8" />
